--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cojacklabs/autoforge",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "type": "module",
   "private": false,
   "license": "MIT",
@@ -25,8 +25,8 @@
   "dependencies": {
     "glob": "^10.3.0",
     "ignore": "^5.3.1",
-    "repomix": "^1.1.0",
-    "yaml": "^2.4.2"
+    "yaml": "^2.4.2",
+    "repomix": "^1.8.0"
   },
   "devDependencies": {
     "prettier": "^3.3.3"
