feat: AutoForge v0.4.0 — single‑session orchestrator, strict quality gates, approvals/memory, telemetry, and single‑paste   load
  Summary

  - Introduces a single‑session, multi‑agent Coordinator (PM, UI/UX, Engineer, QA) powered by contract‑first artifacts, hard
    quality gates, governance enforcement, delta memory updates, approvals, and telemetry.
  - Simplifies onboarding with a single‑paste autoforge load that prints the full orchestrator context for Codex/Claude Code/
    Gemini.
  - Adds UX research artifacts (DesignSpec/StyleGuideDiff), structured token updates (CSS/JSON/TS/JS), code‑targets
    enforcement, approval persistence, targeted test detection, telemetry JSONL, and dataset exports.
  - Cleans up packaging: removes examples/ from repo, excludes docs/dev from dist, embeds a doc index into the root README.

  What’s new

  - Orchestrator Context (single paste)
      - autoforge load now prints the complete orchestrator context for a single copy/paste.
      - Strict session contract: governance, memory gates, code boundaries, artifacts, quality gates, and compliance
        self‑audit template.
  - Coordinator runtime (single‑session, artifact‑driven)
      - Builds UserAsk → IssueReport → DesignSpec/StyleGuideDiff → CodePlan/TestPlan; validates via JSON Schema (Ajv
        optional).
      - Enforces code boundaries using .autoforge/ai/code_targets.yaml.
      - Approval‑gated apply: structured token updates (CSS vars, JSON nested keys, simple TS/JS string keys) and a
        conservative Button.*sx focus‑visible hint.
      - Re‑runs post‑apply gates: parse → Prettier → ESLint → TSC → tests (Jest/Vitest auto‑detected; falls back to configured
        command).
      - Telemetry: JSONL event logging to .autoforge/ai/logs/activity.jsonl.
  - Adapters (pm/uiux/engineer/qa)
      - PM: normalizes prompt → UserAsk; triages IssueReport.
      - UI/UX: discovers tokens across CSS/JSON/TS/JS; computes StyleGuideDiff from repo tokens; proposes CodePlan/Te

--- a/autoforge.config.json
+++ b/autoforge.config.json
@@ -45,5 +45,12 @@
   "features": {
     "exampleApp": false,
     "securityChecklists": true
+  },
+  "qualityPolicies": {
+    "typecheck": { "cmd": "npm run typecheck", "required": true },
+    "lint": { "cmd": "npm run lint", "maxWarnings": 0, "required": true },
+    "format": { "cmdCheck": "npm run format:check", "cmdWrite": "npm run format", "allowWrite": true },
+    "docs": { "jsonSchema": true, "yamlLint": true, "markdownLint": true, "openapiLint": true },
+    "tests": { "cmd": "npm test -s", "runOnChanged": true }
   }
 }
