feat: AutoForge v0.4.1 — docs-based orchestrator context, rules directory, stricter load prompt, minimal dist
  Summary

  - Moves the Orchestrator Context to docs/ORCHESTRATOR_CONTEXT.md for easier IDE access.
  - Adds ai/rules/** with enforcement, execution policies, coding standards, communication contract, and change management.
  - Updates autoforge load to instruct AI to read core policies + rules and then embeds the full orchestrator context in a
    single paste.
  - Keeps dist minimal: excludes docs/dev and examples/, includes all public docs, rules, policies, and schemas.

  What changed

  - Orchestrator Context
      - New: docs/ORCHESTRATOR_CONTEXT.md (full single-session, multi-role contract)
      - Legacy fallback remains: .autoforge/ai/prompts/orchestrator_context.md (load falls back if needed)
  - Rules directory
      - ai/rules/README.md — overview and read order
      - ai/rules/enforcement.yaml — hard rules (schema validation, gate order, boundaries, approvals, memory, retries,
        compliance)
      - ai/rules/execution_policies.yaml — workflow loop, concurrency, retries, compliance fields
      - ai/rules/coding_standards.md — TS/ESLint/Prettier/JSON/YAML/MD/OpenAPI
      - ai/rules/communication_contract.md — acknowledge, clarifiers, compliance self-audit, memory deltas, escalation
      - ai/rules/change_management.md — CRs, impact analysis, commit playbook, SemVer
  - autoforge load
      - Now prints a single block that:
          - Reads and reloads latest context
          - Loads core files under .autoforge/ (context, agents, AGENTS.md, rules, commit playbook, multi-project guide)
          - Acknowledges managed files are generated from autoforge.config.json
          - Confirms rules/roles/progress/memory reload
          - Embeds the full Orchestrator Context
          - Requires the acknowledgement phrase to be returned
  - Packaging
      - dist includes docs/ORCHESTRATOR_CONTEXT.md and ai/rules/**
      - dist excludes docs/de

--- a/ai/agents.yaml
+++ b/ai/agents.yaml
@@ -1,5 +1,5 @@
 description: Agent roles, permissions, and communication boundaries for the ROS AI autonomous workflow.
-note:
+note: |
   All paths are relative to the repository root. When AutoForge is located inside
   another project (e.g., `custom-project/.autoforge`, legacy: `custom-project/autoforge`),
   treat that subdirectory as the working directory and do not modify files outside it.
