--- a/devops/ci/mobile_app.yml
+++ b/devops/ci/mobile_app.yml
@@ -2,9 +2,9 @@ name: Mobile App CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build_test:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "18"
       - name: Install
         run: npm ci
       - name: Validate AutoForge context (planning gates)
@@ -22,4 +22,3 @@ jobs:
           npx autoforge validate || node ../.autoforge/scripts/validate_context.js || true
       - name: Test
         run: npm test --if-present
-
