--- a/devops/ci/web_app.yml
+++ b/devops/ci/web_app.yml
@@ -2,9 +2,9 @@ name: Web App CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build_test:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: "18"
       - name: Install
         run: npm ci
       - name: Validate AutoForge context (planning gates)
@@ -24,4 +24,3 @@ jobs:
         run: npm run build --if-present
       - name: Test
         run: npm test --if-present
-
